--- a/css/style.css
+++ b/css/style.css
@@ -462,6 +462,10 @@ nav ul li .last {
 }
 
 @media only screen and (min-device-width: 1023px) and (max-device-width: 1025px) and (min-device-height: 599px) and (max-device-height: 605px) {
+  .lady {
+  height: 83vh;
+}
+
   .fencer {
   height: 125vh;
   }
@@ -474,9 +478,9 @@ nav ul li .last {
     font-size: 3em;
   }
 
-  .advH1 {
-    margin-top: 2em;
- }
+ .btnLanding, .btnLanding2 {
+  padding: 0.8em 2em;
+}
 }
 
 @media only screen and (max-width: 992px) {
