--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ nav ul li .last {
   bottom: 0.1em;
   right: -9px;
   z-index: 2;
-  background: red;
+  background: lime;
 }
 
 .aboutWork {
@@ -539,7 +539,7 @@ nav ul li .last {
   }
 
   .navbar-nav .nav-link {
-    padding: 0.3em 2em;
+    padding: 0.3em 1em;
   }
 
   .btnLanding {
