--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ nav ul li .last {
 .workRowDiv h5 {
   font-weight: bold;
   font-size: 1.4em;
-  color: rgb(255, 77, 255);
+  color: white;
   padding: 0.715em 1.5em;
   margin-bottom: 0;
 }
@@ -209,9 +209,9 @@ nav ul li .last {
 }
 
 .workRowDiv h5:hover {
-  transition: 0.35s ease;
-  color: white;
-  background-color: rgb(100, 0, 100);
+  transition: 0.4s ease;
+  color: black;
+  background-color: rgb(255, 77, 255);
 }
 
 .panel-body ul {
@@ -222,6 +222,7 @@ nav ul li .last {
 
 .panel-collapse {
   background-color: black;
+  transition: 0.5s ease;
 }
 
 .panel-body ul li {
