--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ nav ul li .last {
   transition: 0.35s ease;
 }
 
-.dot {
+/* .dot {
   position: relative;
 }
 
@@ -159,7 +159,7 @@ nav ul li .last {
   right: -9px;
   z-index: 2;
   background: lime;
-}
+} */
 
 .aboutWork {
   background-image: url("../images/fen.jpg");
