--- a/css/style.css
+++ b/css/style.css
@@ -205,9 +205,12 @@ nav ul li .last {
   margin-bottom: 0;
 }
 
+.navbar-collapse, .panel-collapse {
+  transition: 0.5s ease;
+}
+
 .panel-collapse {
   background-color: black;
-  transition: 0.5s ease;
 }
 
 .panel-body ul li {
@@ -595,6 +598,8 @@ nav ul li .last {
     font-size: 1.1rem;
   }
 
+  
+
   a.nav-link {
     margin: 0.4em 0;
   }
@@ -629,13 +634,18 @@ nav ul li .last {
   }
 
   nav ul li a {
-    background-color: rgba(255, 77, 255, 0.99);
+    background-color: rgb(255, 202, 255);
     color: black;
+    -webkit-box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
+    -moz-box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
+    box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
   }
 
   nav ul li a:hover,
   nav ul li a:active {
-    color: white;
+    background-color: rgb(255, 231, 255);
+    color: purple;
+    transition: 0.35s ease;
   }
 
   .nav-item .nav-link {
