--- a/css/style.css
+++ b/css/style.css
@@ -183,9 +183,9 @@ nav ul li .last {
 }
 
 .carousel-inner {
-  -webkit-box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
-  -moz-box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
-  box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
+  -webkit-box-shadow: 2px -1px 9px -3px gray;
+  -moz-box-shadow: 2px -1px 9px -3px gray;
+  box-shadow: 2px -1px 9px -3px gray;
   padding: 1em;
 }
 
