--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,11 @@ nav ul li .last {
 
 .footer-copyright {
   padding: 0 1em 1em 1em;
+  margin: 1em 0 0.5em;
+}
+
+.botDivAdv2 {
+  text-align: right;
 }
 
 /* Media  */
@@ -767,15 +772,10 @@ nav ul li .last {
   .footer-copyright {
     font-size: 0.7em;
     text-align: center;
-    margin: 1em 0;
   }
 
   .carousel-item p {
     font-size: 17px;
-  }
-
-  .botDivAdv2 {
-    text-align: right;
   }
 }
 
