--- a/css/style.css
+++ b/css/style.css
@@ -708,23 +708,9 @@ nav ul li .last {
   }
 
   .fencer2 {
-    position: relative;
-  }
-
-  .fencer2 {
     display: block;
-    min-height: 53vh;
-  }
-
-  .fencer2:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    background: rgba(120, 0, 120, 0.15);
-    height: 100%;
-    z-index: -1;
+    min-height: 51vh;
+    background-position-y: -75px;
   }
 
   .carousel-item h4 {
@@ -775,9 +761,21 @@ nav ul li .last {
   }
 }
 
+@media screen and (min-device-width: 449px) and (max-device-width: 501px) {
+  .fencer2 {
+    min-height: 55vh;
+    background-position-y: -90px;
+  }
+}
+
 @media only screen and (max-width: 321px) {
   .main h1 {
     font-size: 1.7em;
+  }
+
+  .fencer2 {
+    min-height: 41vh;
+    background-position-y: -70px;
   }
 
   .btnLanding {
