--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ nav ul li .last {
 
 .dropdown-item.active:hover,
 .dropdown-item:hover {
-  background-color: rgb(255, 188, 198);
+  background-color: rgb(255, 77, 255);
   color: black;
   padding: 0.5em 1em;
   margin: 0.5em 0;
@@ -630,7 +630,7 @@ nav ul li .last {
   }
 
   nav ul li a {
-    background-color: rgb(255, 231, 255);
+    background-color: rgb(255, 255, 255);
     color: black;
     -webkit-box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
     -moz-box-shadow: 2px -1px 8px -3px rgb(120, 0, 120);
@@ -639,8 +639,8 @@ nav ul li .last {
 
   nav ul li a:hover,
   nav ul li a:active {
-    background-color: rgb(255, 255, 255);
-    color: purple;
+    background-color: purple;
+    color: white;
     transition: 0.35s ease;
   }
 
