--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,11 @@ nav ul li a {
 
 nav ul li a:hover,
 nav ul li a:active {
-  color: rgb(255, 77, 255);
+  color: rgb(221, 221, 221);
+}
+
+.active {
+  color: rgb(160, 160, 160);
 }
 
 nav ul li .last {
@@ -358,7 +362,7 @@ nav ul li .last {
 
 .dropdown-item.active:hover,
 .dropdown-item:hover {
-  background-color: rgb(255, 77, 255);
+  background-color: rgb(189, 189, 189);
   color: black;
   padding: 0.5em 1em;
   margin: 0.5em 0;
@@ -552,7 +556,7 @@ nav ul li .last {
   }
 
   #VladoA {
-    margin-top: 1em;
+    margin-top: 0.75em;
   }
 
   .lady {
@@ -613,7 +617,7 @@ nav ul li .last {
   }
 
   .navbar-nav .nav-link {
-    padding: 0.3em 1em;
+    padding: 0.15em 1em;
   }
 
   .btnLanding {
@@ -658,9 +662,13 @@ nav ul li .last {
   }
 
   .nav-item .nav-link {
-    margin: 1em 0 0 1em;
+    margin: 0.75em 0 0 1em;
     display: flex;
     align-items: center;
+  }
+
+  a.nav-link.first {
+    margin-top: 1em;
   }
 
   a.nav-link.last {
@@ -742,16 +750,17 @@ nav ul li .last {
 
   .dropdown-item.active,
   .dropdown-item {
-    background-color: rgb(255, 231, 235);
-    color: black;
     width: 85%;
     float: right;
   }
 
+  .active {
+    color: rgb(69, 69, 69);
+  }
+
   .dropdown-item.active:hover,
   .dropdown-item:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;
+    background-color: rgb(207, 207, 207);
     border-left: 0.3em solid rgb(255, 77, 255);
     transition: 0.35s ease;
   }
