--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ nav ul li .last {
   background-attachment: fixed;
 }
 
+.bgDark {
+  height: 30vh;
+  background-color: rgba(0, 0, 0, 0.35);
+}
+
 .main {
   height: 75vh;
   color: white;
@@ -463,7 +468,8 @@ nav ul li .last {
     min-height: 50vh;
   }
 
-  .bgFen {
+  .bgFen,
+  .bgDark {
     height: 25vh;
   }
 }
@@ -516,7 +522,8 @@ nav ul li .last {
     padding: 0.75em;
   }
 
-  .bgFen {
+  .bgFen,
+  .bgDark {
     height: 20vh;
   }
 
@@ -794,7 +801,8 @@ nav ul li .last {
   }
 
   .fencer,
-  .bgFen {
+  .bgFen,
+  .bgDark {
     display: none;
   }
 
