--- a/css/style.css
+++ b/css/style.css
@@ -166,9 +166,9 @@ nav ul li .last {
 
 .workFlexRow {
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  padding: 6em 0;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5em 0;
   position: relative;
 }
 
@@ -185,7 +185,7 @@ nav ul li .last {
 
 .workRowDiv h5 {
   font-weight: bold;
-  font-size: 1.4em;
+  font-size: 1.5em;
   color: white;
   padding: 0.715em 1em;
   margin-bottom: 0;
@@ -747,7 +747,7 @@ nav ul li .last {
   }
 
   .workRowDiv h5 {
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
 
   .advokatText {
@@ -887,6 +887,7 @@ nav ul li .last {
 
   .workRowDiv h5 {
     padding: 0.715em;
+    font-size: 1.2em;
   }
 
   #doma {
@@ -894,7 +895,7 @@ nav ul li .last {
   }
 
   .mailAdv {
-    font-size: 0.8em;
+    font-size: 0.77em;
   }
 
   .street2 {
