--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,8 @@ nav ul li .last {
 }
 
 .main h1 {
-  font-size: 3.6em;
+  font-size: 3.25em;
+  letter-spacing: 2px;
 }
 
 .advH1 {
@@ -137,10 +138,10 @@ nav ul li .last {
   background-color: rgb(255, 77, 255);
   color: black;
   border-radius: 0;
-  padding: 0.75em 1.75em;
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-top: 1.5em;
+  padding: 0.5em 1.75em;
+  font-size: 1.8em;
+  font-weight: bolder;
+  margin-top: 1em;
   letter-spacing: 5px;
 }
 
@@ -638,7 +639,6 @@ nav ul li .last {
     font-size: 0.85em;
     text-align: left;
   }
-  
 }
 
 @media only screen and (max-width: 767px) {
@@ -670,21 +670,21 @@ nav ul li .last {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 1em;
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
-    margin: 3.25em auto 0;
+    padding: 0.75em;
+    margin: 2.25em 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bolder;
   }
 
-  .fa-angle-down {
+  /* .fa-angle-down {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    font-size: 1.5em;
+   
     margin: 2px 0 0 4px;
-  }
+  } */
 
   nav ul li a {
     background-color: rgb(255, 255, 255);
@@ -728,7 +728,8 @@ nav ul li .last {
 
   .main h1 {
     margin-top: 2em;
-    font-size: 2.1em;
+    font-size: 2em;
+    letter-spacing: 1px;
   }
 
   h3 {
@@ -896,8 +897,8 @@ nav ul li .last {
   }
 
   .btnLanding {
-    padding: 0.5em 1.2em;
-    font-size: 1.15em;
+    padding: 0.5em;
+    font-size: 0.95em;
     margin-top: 3.25em;
   }
 
